--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>Mark Lukacs</title>
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,700|Oxygen:700" rel="stylesheet">
-    <!-- Bootstrap css -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Bootstrap original css -->
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
+    <!-- customized css -->
+    <link href="src/css/main.min.css" rel="stylesheet">
     <!-- internal css -->
     <link rel="stylesheet" href="src/css/style.css">
 </head>
@@ -110,7 +112,7 @@
 
                 <!-- project cards -->
                 <section class="text-light text-center container">
-                    <h1 class="display-5 text-dark">
+                    <h1 class="display-5 text-primary">
                         Projects where the focus was on writing code</h1>
                     <div id="writing_projects" class="d-flex bd-highlight mb-3 flex-wrap">
                         <!-- js fills the rest here -->
@@ -131,7 +133,7 @@
                 <section class="container">
                     <h1 class="display-6 text-dark">
                         If this all got you interested, and have a fun next project proposal
-                        <a class="btn btn-primary btn-lg" href="https://www.linkedin.com/feed/">
+                        <a class="btn btn-primary btn-lg" href="https://www.linkedin.com/vispark/">
                             share it with me
                         </a>
                     </h1>
