added a bit more content

--- a/index.html
+++ b/index.html
@@ -59,17 +59,15 @@
                 <!-- Landing text -->
                 <!-- TODO: flexbox for l-r divison -->
                 <section class="landing container">
-                    <div class="lead-text text-light text-center py-5 justify-content-between d-sm-flex">
+                    <div class="lead-text text-light py-5 d-sm-flex align-items-center justify-content-between">
                         <div class="">
                             <h1 class="display-5 landing-title">Welcome on the website of <span
                                     class="text-warning">Mark</span>...</h1>
 
                             <p class="lead landing-paragraph">
                                 I'm a graduating data scientist*. Take a look at my projects while I figure out the rest
-                                of
-                                the website... If you're in a hurry the list <span class="text-warning">numpy, pandas,
-                                    pytorch, matplotlib,
-                                    networkx</span> should tell everything!
+                                of the website... If you're in a hurry the list <span class="text-warning">[numpy,
+                                    pandas, pytorch, matplotlib, networkx]</span> should tell everything!
                             </p>
                             <p class="landing-paragraph">
                                 *technically I'm doing management of technology see the <a
@@ -77,7 +75,8 @@
                             </p>
                         </div>
                         <!-- buttons to sm -->
-                        <div class="w-50">
+                        <div class="d-none d-sm-block text-center">
+                            <img src="/src/images/gray_scale_portrait.png" class="img-fluid">
                             <p>
                                 <a class="btn btn-primary landing-cta" href="https://www.linkedin.com/in/vispark/"><svg
                                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
