--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="parallax">
         <div class="parallax_container">
             <div class="parallax__layer parallax__layer--back">
+                <!-- TODO: fix image on small wh devides -->
                 <img class="bg-img" src="src/images/TU_Delft_lib.jpg" , background-color="black" ;>
                 <div class="landing-bg bg-secondary"></div>
                 <div class="hero-particles-container">
@@ -27,6 +28,8 @@
 
             <div class="parallax__layer parallax__layer--base">
                 <!-- Navbar WIP-->
+                <!-- TODO: fix on top of page -->
+                <!-- TODO: smooth scrolling -->
                 <nav class="navbar bg-secondary navbar-dark fixed-top navbar-expand-lg py-2">
                     <div class="container">
                         <a href="#" class="navbar-brand">Placeholder</a>
