--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width">
     <title>Mark Lukacs</title>
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Heebo:400,700|Oxygen:700" rel="stylesheet">
-    <!-- Bootstrap css -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- internal css -->
+    <link href="https://fonts.googleapis.com/css?family=Oxygen:700" rel="stylesheet">
+    <!-- customized bootstrap -->
+    <link href="src/css/main.min.css" rel="stylesheet">
+    <!-- custom css -->
     <link rel="stylesheet" href="src/css/style.css">
 </head>
 
@@ -18,8 +17,9 @@
     <div class="parallax">
         <div class="parallax_container">
             <div class="parallax__layer parallax__layer--back">
+                <!-- TODO: fix image on small wh devides -->
                 <img class="bg-img" src="src/images/TU_Delft_lib.jpg" , background-color="black" ;>
-                <div class="landing-bg bg-dark"></div>
+                <div class="landing-bg bg-secondary"></div>
                 <div class="hero-particles-container">
                     <canvas id="hero-particles"></canvas>
                 </div>
@@ -28,7 +28,9 @@
 
             <div class="parallax__layer parallax__layer--base">
                 <!-- Navbar WIP-->
-                <nav class="navbar bg-dark navbar-dark fixed-top navbar-expand-lg py-2">
+                <!-- TODO: fix on top of page -->
+                <!-- TODO: smooth scrolling -->
+                <nav class="navbar bg-secondary navbar-dark fixed-top navbar-expand-lg py-2">
                     <div class="container">
                         <a href="#" class="navbar-brand">Placeholder</a>
 
@@ -46,7 +48,7 @@
                                     <a href="#projects" class="nav-link">Projects</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#contact" class="nav-link">Who tf is Mark/contact </a>
+                                    <a href="#about" class="nav-link">Who tf is Mark/contact </a>
                                     write intro here + sm links
                                 </li>
                             </ul>
@@ -55,93 +57,138 @@
                     </div>
                 </nav>
                 <!-- Landing text -->
-                <!-- TODO: flexbox for l-r divison -->
-                <section class="landing">
-                    <div class="lead-text text-light text-center py-5 justify-content-between">
-                        <h1 class="display-5 landing-title">Welcome on the website of <span
-                                class="text-warning">Mark</span>...</h1>
+                <section class="landing container">
+                    <div class="lead-text text-light py-5 d-sm-flex align-items-center justify-content-between">
+                        <div class="">
+                            <h1 class="display-5 landing-title">Welcome on the website of <span
+                                    class="text-warning">Mark</span>...</h1>
 
-                        <p class="lead landing-paragraph">
-                            I'm a graduating data scientist*. Take a look at my projects while I figure out the rest of
-                            the website...
-                        </p>
-                        <p class="lead landing-paragraph">
-                            If you're in a hurry the list <span class="text-warning">numpy, pandas, pytorch, matplotlib,
-                                networkx</span> should tell everything!
-                        </p>
-                        <p class="landing-paragraph">
-                            *technically I'm doing management of technology see the <a
-                                class="btn btn-outline-primary btn-sm" href="#about">about section</a>
-                        </p>
+                            <p class="lead landing-paragraph">
+                                I'm a graduating data scientist*. Take a look at my projects while I figure out the rest
+                                of the website... If you're in a hurry the list <span class="text-warning">[numpy,
+                                    pandas, pytorch, matplotlib, networkx]</span> should tell everything!
+                            </p>
+                            <p class="landing-paragraph">
+                                *technically I'm doing management of technology see the <a
+                                    class="btn btn-outline-primary btn-sm" href="#about">about section</a>
+                            </p>
+                        </div>
                         <!-- buttons to sm -->
-                        <p>
-                            <a class="btn btn-primary landing-cta" href="https://www.linkedin.com/in/vispark/"><svg
-                                    xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                                    aria-hidden="true" focusable="false" width="1.03em" height="1em"
-                                    style="-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);"
-                                    preserveAspectRatio="xMidYMid meet" viewBox="0 0 34 34">
-                                    <path
-                                        d="M34,2.5v29A2.5,2.5,0,0,1,31.5,34H2.5A2.5,2.5,0,0,1,0,31.5V2.5A2.5,2.5,0,0,1,2.5,0h29A2.5,2.5,0,0,1,34,2.5ZM10,13H5V29h5Zm.45-5.5A2.88,2.88,0,0,0,7.59,4.6H7.5a2.9,2.9,0,0,0,0,5.8h0a2.88,2.88,0,0,0,2.95-2.81ZM29,19.28c0-4.81-3.06-6.68-6.1-6.68a5.7,5.7,0,0,0-5.06,2.58H17.7V13H13V29h5V20.49a3.32,3.32,0,0,1,3-3.58h.19c1.59,0,2.77,1,2.77,3.52V29h5Z"
-                                        fill="#161614"></path>
-                                </svg>
-                                LinkedIn
-                            </a>
-                        </p>
-                        <p>
-                            <a class="btn btn-primary landing-cta" href="https://lukacs-mark.medium.com/">
-                                Medium
-                            </a>
-                        </p>
-                        <p>
-                            <a class="btn btn-primary landing-cta" href="https://github.com/vioSpark"><svg
-                                    xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                                    aria-hidden="true" focusable="false" width="1.03em" height="1em"
-                                    style="-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);"
-                                    preserveAspectRatio="xMidYMid meet" viewBox="0 0 256 250">
-                                    <path
-                                        d="M128.001 0C57.317 0 0 57.307 0 128.001c0 56.554 36.676 104.535 87.535 121.46c6.397 1.185 8.746-2.777 8.746-6.158c0-3.052-.12-13.135-.174-23.83c-35.61 7.742-43.124-15.103-43.124-15.103c-5.823-14.795-14.213-18.73-14.213-18.73c-11.613-7.944.876-7.78.876-7.78c12.853.902 19.621 13.19 19.621 13.19c11.417 19.568 29.945 13.911 37.249 10.64c1.149-8.272 4.466-13.92 8.127-17.116c-28.431-3.236-58.318-14.212-58.318-63.258c0-13.975 5-25.394 13.188-34.358c-1.329-3.224-5.71-16.242 1.24-33.874c0 0 10.749-3.44 35.21 13.121c10.21-2.836 21.16-4.258 32.038-4.307c10.878.049 21.837 1.47 32.066 4.307c24.431-16.56 35.165-13.12 35.165-13.12c6.967 17.63 2.584 30.65 1.255 33.873c8.207 8.964 13.173 20.383 13.173 34.358c0 49.163-29.944 59.988-58.447 63.157c4.591 3.972 8.682 11.762 8.682 23.704c0 17.126-.148 30.91-.148 35.126c0 3.407 2.304 7.398 8.792 6.14C219.37 232.5 256 184.537 256 128.002C256 57.307 198.691 0 128.001 0zm-80.06 182.34c-.282.636-1.283.827-2.194.39c-.929-.417-1.45-1.284-1.15-1.922c.276-.655 1.279-.838 2.205-.399c.93.418 1.46 1.293 1.139 1.931zm6.296 5.618c-.61.566-1.804.303-2.614-.591c-.837-.892-.994-2.086-.375-2.66c.63-.566 1.787-.301 2.626.591c.838.903 1 2.088.363 2.66zm4.32 7.188c-.785.545-2.067.034-2.86-1.104c-.784-1.138-.784-2.503.017-3.05c.795-.547 2.058-.055 2.861 1.075c.782 1.157.782 2.522-.019 3.08zm7.304 8.325c-.701.774-2.196.566-3.29-.49c-1.119-1.032-1.43-2.496-.726-3.27c.71-.776 2.213-.558 3.315.49c1.11 1.03 1.45 2.505.701 3.27zm9.442 2.81c-.31 1.003-1.75 1.459-3.199 1.033c-1.448-.439-2.395-1.613-2.103-2.626c.301-1.01 1.747-1.484 3.207-1.028c1.446.436 2.396 1.602 2.095 2.622zm10.744 1.193c.036 1.055-1.193 1.93-2.715 1.95c-1.53.034-2.769-.82-2.786-1.86c0-1.065 1.202-1.932 2.733-1.958c1.522-.03 2.768.818 2.768 1.868zm10.555-.405c.182 1.03-.875 2.088-2.387 2.37c-1.485.271-2.861-.365-3.05-1.386c-.184-1.056.893-2.114 2.376-2.387c1.514-.263 2.868.356 3.061 1.403z"
-                                        fill="#161614" />
-                                </svg>
-                                GitHub
-                            </a>
-                        </p>
+                        <div class="d-none d-sm-block text-center">
+                            <img src="/src/images/gray_scale_portrait.png" class="img-fluid">
+                            <p>
+                                <a class="btn btn-primary landing-cta" target="_blank"
+                                    href="https://www.linkedin.com/in/vispark/"><svg xmlns="http://www.w3.org/2000/svg"
+                                        xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" focusable="false"
+                                        width="1.03em" height="1em"
+                                        style="-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);"
+                                        preserveAspectRatio="xMidYMid meet" viewBox="0 0 34 34">
+                                        <path
+                                            d="M34,2.5v29A2.5,2.5,0,0,1,31.5,34H2.5A2.5,2.5,0,0,1,0,31.5V2.5A2.5,2.5,0,0,1,2.5,0h29A2.5,2.5,0,0,1,34,2.5ZM10,13H5V29h5Zm.45-5.5A2.88,2.88,0,0,0,7.59,4.6H7.5a2.9,2.9,0,0,0,0,5.8h0a2.88,2.88,0,0,0,2.95-2.81ZM29,19.28c0-4.81-3.06-6.68-6.1-6.68a5.7,5.7,0,0,0-5.06,2.58H17.7V13H13V29h5V20.49a3.32,3.32,0,0,1,3-3.58h.19c1.59,0,2.77,1,2.77,3.52V29h5Z"
+                                            fill="#161614"></path>
+                                    </svg>
+                                    LinkedIn
+                                </a>
+                            </p>
+                            <p>
+                                <a class="btn btn-primary landing-cta" target="_blank"
+                                    href="https://lukacs-mark.medium.com/">
+                                    Medium
+                                </a>
+                            </p>
+                            <p>
+                                <a class="btn btn-primary landing-cta" target="_blank"
+                                    href="https://github.com/vioSpark"><svg xmlns="http://www.w3.org/2000/svg"
+                                        xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" focusable="false"
+                                        width="1.03em" height="1em"
+                                        style="-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);"
+                                        preserveAspectRatio="xMidYMid meet" viewBox="0 0 256 250">
+                                        <path
+                                            d="M128.001 0C57.317 0 0 57.307 0 128.001c0 56.554 36.676 104.535 87.535 121.46c6.397 1.185 8.746-2.777 8.746-6.158c0-3.052-.12-13.135-.174-23.83c-35.61 7.742-43.124-15.103-43.124-15.103c-5.823-14.795-14.213-18.73-14.213-18.73c-11.613-7.944.876-7.78.876-7.78c12.853.902 19.621 13.19 19.621 13.19c11.417 19.568 29.945 13.911 37.249 10.64c1.149-8.272 4.466-13.92 8.127-17.116c-28.431-3.236-58.318-14.212-58.318-63.258c0-13.975 5-25.394 13.188-34.358c-1.329-3.224-5.71-16.242 1.24-33.874c0 0 10.749-3.44 35.21 13.121c10.21-2.836 21.16-4.258 32.038-4.307c10.878.049 21.837 1.47 32.066 4.307c24.431-16.56 35.165-13.12 35.165-13.12c6.967 17.63 2.584 30.65 1.255 33.873c8.207 8.964 13.173 20.383 13.173 34.358c0 49.163-29.944 59.988-58.447 63.157c4.591 3.972 8.682 11.762 8.682 23.704c0 17.126-.148 30.91-.148 35.126c0 3.407 2.304 7.398 8.792 6.14C219.37 232.5 256 184.537 256 128.002C256 57.307 198.691 0 128.001 0zm-80.06 182.34c-.282.636-1.283.827-2.194.39c-.929-.417-1.45-1.284-1.15-1.922c.276-.655 1.279-.838 2.205-.399c.93.418 1.46 1.293 1.139 1.931zm6.296 5.618c-.61.566-1.804.303-2.614-.591c-.837-.892-.994-2.086-.375-2.66c.63-.566 1.787-.301 2.626.591c.838.903 1 2.088.363 2.66zm4.32 7.188c-.785.545-2.067.034-2.86-1.104c-.784-1.138-.784-2.503.017-3.05c.795-.547 2.058-.055 2.861 1.075c.782 1.157.782 2.522-.019 3.08zm7.304 8.325c-.701.774-2.196.566-3.29-.49c-1.119-1.032-1.43-2.496-.726-3.27c.71-.776 2.213-.558 3.315.49c1.11 1.03 1.45 2.505.701 3.27zm9.442 2.81c-.31 1.003-1.75 1.459-3.199 1.033c-1.448-.439-2.395-1.613-2.103-2.626c.301-1.01 1.747-1.484 3.207-1.028c1.446.436 2.396 1.602 2.095 2.622zm10.744 1.193c.036 1.055-1.193 1.93-2.715 1.95c-1.53.034-2.769-.82-2.786-1.86c0-1.065 1.202-1.932 2.733-1.958c1.522-.03 2.768.818 2.768 1.868zm10.555-.405c.182 1.03-.875 2.088-2.387 2.37c-1.485.271-2.861-.365-3.05-1.386c-.184-1.056.893-2.114 2.376-2.387c1.514-.263 2.868.356 3.061 1.403z"
+                                            fill="#161614" />
+                                    </svg>
+                                    GitHub
+                                </a>
+                            </p>
+                        </div>
                     </div>
                 </section>
 
                 <!-- project cards -->
-                <section class="text-light text-center container">
+                <section id="projects" class="text-light container">
                     <h1 class="display-5 text-dark">
-                        Projects where the focus was on writing code</h1>
+                        <b>
+                            Projects where the focus was on writing code
+                        </b>
+                    </h1>
                     <div id="writing_projects" class="d-flex bd-highlight mb-3 flex-wrap">
                         <!-- js fills the rest here -->
                     </div>
 
                     <!-- more project cards -->
-                    <!--  TODO:  apply color scheme (recompile sass?)        -->
                     <h1 class="display-5 text-dark">
-                        Projects where the focus was on understadning code
+                        <b>
+                            Projects where the focus was on understadning code
+                        </b>
                     </h1>
                     <div id="reading_projects" class="d-flex bd-highlight mb-3 flex-wrap">
                         <!-- js fills the rest here -->
                     </div>
                 </section>
+                <section id="about" class="bg-dark">
+                    <div class="container py-5 text-light">
+                        <h1 class="display-5">
+                            <b>
+                                About me:
+                            </b>
+                        </h1>
+                        <p>
+                            So why Management of Technology?
+                        </p>
+                        <p>
+                            After I discovered my interest in the STEM field at 5th grade I naturally found myself
+                            graduating as a Mechatronics engineer from BME. However, during my bachelor years I
+                            realized that putting together something truly remarkable requires more than one person, so
+                            I particpated in a lot of team projects.
+                        </p>
+                        <p>
+                            During these projects I found out that while engineering is hard on it's own, managing
+                            high-performing engineers is even harder! Attracted by the challange, I followed my newfound
+                            interest in leadership and project management, and submitted my application to the the TU
+                            Delft Management of Technology programme.
+                        </p>
+                        <p>
+                            In the past couple years I learnt quite a lot about innovation management, but I realized
+                            that many decisions aren't based on accurate data. Therefore I plan to finish my studies by
+                            researching what inhibits the full adoption of data science into strategy the creation
+                            process, and what can we do about it.
 
+                        </p>
+                    </div>
+                </section>
 
                 <!-- contact me -->
                 <section class="container">
-                    <h1 class="display-6 text-dark">
-                        If this all got you interested, and have a fun next project proposal
-                        <a class="btn btn-primary btn-lg" href="https://www.linkedin.com/feed/">
-                            share it with me
-                        </a>
+                    <h1 class="display-5 text-dark">
+                        <b>
+                            If this all got you interested, and have a fun next project proposal,
+                            <a class="btn btn-primary btn-lg" href="https://www.linkedin.com/in/vispark/">
+                                let's connect
+                            </a>
+                        </b>
                     </h1>
                 </section>
 
                 <!-- TODO: fill footer -->
                 <footer class="site-footer">
-                    © 2021 Sparkie
-                    <div class="footer-particles-container bg-dark">
+
+                    <div class="footer-absolute-container bg-dark">
                         <canvas id="footer-particles"></canvas>
+                    </div>
+                    <div class="container footer-absolute-container">
+                        <p class="text-light position-absolute end-0">
+                            © 2021 Sparkie
+                        </p>
                     </div>
                 </footer>
             </div>
