portrait image fixed

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         </div>
                         <!-- buttons to sm -->
                         <div class="d-none d-sm-block text-center">
-                            <img src="/src/images/gray_scale_portrait.png" class="img-fluid">
+                            <img src="src/images/gray_scale_portrait.png" class="img-fluid">
                             <p>
                                 <a class="btn btn-primary landing-cta" target="_blank"
                                     href="https://www.linkedin.com/in/vispark/"><svg xmlns="http://www.w3.org/2000/svg"
@@ -171,7 +171,7 @@
                 <section class="container">
                     <h1 class="display-5 text-dark">
                         <b>
-                            If this all got you interested, and have a fun next project proposal,
+                            If this all got you interested, and have a fun next project proposal
                             <a class="btn btn-primary btn-lg" href="https://www.linkedin.com/in/vispark/">
                                 let's connect
                             </a>
