fixed some typos

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                     <a href="#projects" class="nav-link">Projects</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#about" class="nav-link">Who tf is Mark/contact </a>
+                                    <a href="#about" class="nav-link">About me</a>
                                     write intro here + sm links
                                 </li>
                             </ul>
@@ -66,7 +66,7 @@
                             <p class="lead landing-paragraph">
                                 I'm a graduating data scientist*. Take a look at my projects while I figure out the rest
                                 of the website... If you're in a hurry the list <span class="text-warning">[numpy,
-                                    pandas, pytorch, matplotlib, networkx]</span> should tell everything!
+                                    pandas, pytorch, matplotlib, networkX]</span> should tell everything!
                             </p>
                             <p class="landing-paragraph">
                                 *technically I'm doing management of technology see the <a
